--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,13 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: docker:latest
+      - image: cimg/base:current
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       - run:
           name: docker
-          command: |
+          command: | 
                       docker pull vucchaid/ccibase:latest 
 
 # Invoke jobs via workflows
