--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:current
+      - image: vucchaid/ccibase
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
@@ -19,7 +19,8 @@ jobs:
       - run:
           name: docker
           command: | 
-                      docker pull vucchaid/ccibase:latest 
+                      docker pull hello-world
+                      aws --version
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
